Fix wrapping

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ form > div > input[type="range"] {
         flex-wrap: wrap;
     }
 
-    form > div > input  {
+    form > div > input[type="range"]  {
        order: 2;
     }
 }
